--- a/notebook/MFCC Extraction.ipynb
+++ b/notebook/MFCC Extraction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Audio"
+    "from IPython.display import Audio\n",
+    "import IPython.display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sys\n",
     "import librosa\n",
     "import librosa.display\n",
     "import pysptk\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,132 +104,84 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Source parameter extraction\n",
-    "\n",
-    "### Framing and windowing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_length = 1024\n",
-    "hop_length = 80\n",
-    "\n",
-    "def windowing(x):\n",
-    "    # Note that almost all of pysptk functions assume input array is C-contiguous and np.float4 element type\n",
-    "    frames = librosa.util.frame(x, frame_length=frame_length, hop_length=hop_length).astype(np.float64).T\n",
-    "\n",
-    "    # Windowing\n",
-    "    frames *= pysptk.blackman(frame_length)\n",
-    "    assert frames.shape[1] == frame_length \n",
-    "    return frames"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### F0 estimation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# F0 estimation\n",
-    "def f0_estimation(x):\n",
-    "    f0 = pysptk.swipe(x.astype(np.float64), fs=sr, hopsize=hop_length, min=60, max=240, otype=\"f0\")\n",
-    "    plot(f0, linewidth=3, label=\"F0 trajectory estimated by SWIPE'\")\n",
-    "    xlim(0, len(f0))\n",
-    "    legend(prop={'size': 16})\n",
-    "    return f0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "## Mel-generalized cepstrum extraction"
+    "## Mel-frequency cepstrum extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Order of mel-cepstrum\n",
-    "order = 25\n",
-    "alpha = 0.41\n",
-    "stage = 5\n",
-    "gamma = -1.0 / stage\n",
-    "\n",
-    "def mgcep(frames, order=order):\n",
-    "    mgc = pysptk.mgcep(frames, order, alpha, gamma, min_det=0)\n",
-    "    logH = pysptk.mgc2sp(mgc, alpha, gamma, frame_length).real\n",
-    "    librosa.display.specshow(logH.T, sr=sr, hop_length=hop_length, x_axis=\"time\", y_axis=\"linear\")\n",
-    "    colorbar()\n",
-    "    title(\"Spectral envelope estimate from mel-generalized cepstrm\")\n",
-    "    return mgc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_mgc(directory, sample_rate, lc_ext_name=\".csv\"):\n",
-    "    files = find_files(directory)\n",
-    "    print(\"files length: {}\".format(len(files)))\n",
-    "    for filename in files:\n",
-    "        print filename\n",
-    "        audio, _ = librosa.load(filename, sr=sample_rate, mono=True)\n",
-    "        frames = windowing(audio)\n",
-    "        mgc = mgcep(frames)\n",
-    "        print mgc.shape\n",
-    "        df = pd.DataFrame(mgc)\n",
+    "def generate_mfcc(directory, sample_rate, lc_dir_name, n_mfcc, lc_ext_name=\".csv\"):\n",
+    "    files = find_files(directory,  pattern=\"p225*.wav\")\n",
+    "    for index, filename in enumerate(files):\n",
+    "        print(str(index)+\"/\"+str(len(files)))\n",
+    "        print(filename)\n",
     "        lc_filename = copy.deepcopy(filename)\n",
     "        if lc_filename.endswith('.wav'):\n",
     "            lc_filename = lc_filename[:-4] + lc_ext_name\n",
-    "        lc_filename = lc_filename.replace(\"wav48\", \"mgc\")\n",
+    "        lc_filename = lc_filename.replace(\"wav48\", lc_dir_name)\n",
+    "        if os.path.isfile(lc_filename):\n",
+    "            IPython.display.clear_output(wait=True)\n",
+    "            continue\n",
+    "        audio, _ = librosa.load(filename, sr=sample_rate, mono=True)\n",
+    "        mfcc = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=n_mfcc) # shape = (n_mfcc, t)\n",
+    "        df = pd.DataFrame(mfcc.T)\n",
+    "        print(str(mfcc.T.shape))\n",
     "        if not os.path.exists(os.path.dirname(lc_filename)):\n",
     "            try:\n",
     "                os.makedirs(os.path.dirname(lc_filename))\n",
     "            except OSError as exc: # Guard against race condition\n",
     "                if exc.errno != errno.EEXIST:\n",
     "                    raise\n",
-    "        print lc_filename\n",
-    "        df.to_csv(lc_filename, sep=',', header=None, index=None) "
+    "        print(lc_filename)\n",
+    "        df.to_csv(lc_filename, sep=',', header=None, index=None) \n",
+    "        IPython.display.clear_output(wait=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_lc_map(directory):\n",
-    "    files = find_files(directory)\n",
+    "    files = find_files(directory, pattern=\"p225*.wav\")\n",
     "    print(\"files length: {}\".format(len(files)))\n",
     "    lookup = {}\n",
     "    for filename in files:\n",
     "        p_filename = filename.split(directory)[-1]\n",
-    "        print filename, p_filename\n",
+    "        print(filename +\" \"+p_filename)\n",
     "        # p_lc_filename = p_filename.replace(\"wav48\", \"mfcc\").replace(\".wav\", \".csv\")\n",
-    "        p_lc_filename = \"../../mgc/p225\"+p_filename.replace(\".wav\", \".csv\")\n",
+    "        p_lc_filename = \"../../mfcc40/p225\"+p_filename.replace(\".wav\", \".csv\")\n",
     "        lookup[p_filename] = p_lc_filename\n",
-    "    with open(directory+\"/mgc_p225.json\", \"w\") as output:\n",
+    "    with open(directory+\"/mfcc40_p225.json\", \"w\") as output:\n",
     "        json.dump(lookup, output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230/231\n",
+      "../../VCTK-Corpus/wav48/p225/p225_145.wav\n",
+      "(63, 40)\n",
+      "../../VCTK-Corpus/mfcc40/p225/p225_145.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_mfcc(\"../../VCTK-Corpus\", 16000, \"mfcc40\", 40, lc_ext_name=\".csv\")"
    ]
   },
   {
@@ -235,9 +189,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "generate_mgc(\"../../VCTK-Corpus\", 16000, lc_ext_name=\".csv\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
